force-app/main/default/objects/ODX_Court_Date__c/ODX_Court_Date__c.object-meta.xml
<CustomObject>
    <label>ODX Court Date</label>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ODX Court Dates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>