force-app/main/default/objects/ODX_Court_Date__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>ODX Court Dates</relationshipLabel>
    <relationshipName>ODX_Court_Dates</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>