force-app/main/default/objects/ODX_Court_Date__c/fields/Event_At__c.field-meta.xml
<CustomField>
    <fullName>Event_At__c</fullName>
    <label>Event At</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>