force-app/main/default/objects/ODX_Court_Date__c/fields/ODX_Case__c.field-meta.xml
<CustomField>
    <fullName>ODX_Case__c</fullName>
    <label>ODX Case</label>
    <referenceTo>ODX_Case__c</referenceTo>
    <relationshipLabel>ODX Court Dates</relationshipLabel>
    <relationshipName>ODX_Court_Dates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>