force-app/main/default/objects/ODX_Court_Date__c/fields/ODX_Event_Category__c.field-meta.xml
<CustomField>
    <fullName>ODX_Event_Category__c</fullName>
    <label>ODX Event Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>